--- a/package.json
+++ b/package.json
@@ -9,19 +9,54 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-toggle": "^1.0.3",
+    "@reduxjs/toolkit": "^1.9.7",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "fabric": "^5.3.0",
+    "framer-motion": "^10.16.4",
+    "jotai": "^2.5.0",
+    "jotai-effect": "^0.2.2",
+    "konva": "^9.2.2",
+    "lucide-react": "^0.288.0",
+    "nanoid": "^5.0.2",
+    "next": "13.5.6",
+    "next-themes": "^0.2.1",
     "react": "^18",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18",
-    "next": "13.5.6"
+    "react-hook-form": "^7.47.0",
+    "react-icons": "^4.11.0",
+    "react-konva": "^18.2.10",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
+    "socket.io-client": "^4.7.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwind-scrollbar": "^3.0.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-animate": "^1.0.7",
+    "use-sound": "^4.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/fabric": "^5.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "eslint": "^8",
+    "eslint-config-next": "13.5.6",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.6"
+    "typescript": "^5"
   }
 }
